--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,8 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+html(lang=en)
+  include ./includes/head.pug
   body
+    include ./includes/header-nav.pug
     block content
+    include ./includes/footer.pug
+
