--- a/src/views/login.html
+++ b/src/views/login.html
@@ -2,54 +2,29 @@
 <html>
     <head>
         <style>
-            #user {
-                text-align: left;
+            .wrapper {    
+                margin-top: 80px;
+                margin-bottom: 20px;
             }
-            #pass {
-                text-align: left;
-            }
-            #userText {
-                position: fixed;
-                left: 80px;
-                top: 16px;
-            }
-            #passText {
-                position: fixed;
-                left: 80px;
-                top: 50px;
-            }
-            #login {
-                position: fixed;
-                left: 80px;
-                top: 90px;
-            }
-            #register {
-                position: fixed;
-                left: 160px;
-                top: 90px;
+            form {
+                width: 320px;
+                margin: 0 auto;
             }
         </style>
     </head>
     <body>
-        <p id = "user">Username:</p>
-        <p id = "pass">Password:</p>
-        <textarea id = "userText" rows = "1" cols = "20"></textarea>
-        <textarea id ="passText" rows = "1" cols = "20"></textarea>
-        <button id = "login" onclick = "loginFunction()">Login</button>
-        <button id = "register" onclick = "registerFunction()">Register Now!</button>  
-        
-        <script>
-            function loginFunction() {
-                var userTxt = document.getElementById("userText");
-                var passTxt = document.getElementById("passText");
-                
-                if (passTxt.value.length < 7 || userTxt.value.length == 0) {
-                    alert("Incorrect Login Information");
-                }
-            }
-            function registerFunction() {
-                window.location.href = "/register";
-            }
-        </script>
+        <div class = "container">
+            <div class="wrapper">
+		        <form action="" method="post" name="Login_Form" class="form-signin">       
+		            <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
+			        <hr class="colorgraph"><br>
+			  
+			        <input type="text" class="form-control" name="Username" placeholder="Username" required="" autofocus="" />
+			        <input type="password" class="form-control" name="Password" placeholder="Password" required=""/>     		  
+			 
+			        <button class="btn btn-lg btn-primary btn-block"  name="Submit" value="Login" type="Submit">Login</button>  			
+		        </form>			
+	       </div>
+        </div>
     </body>
 </html>
