--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,8 +1,10 @@
 doctype html
 html(lang=en)
-  include ./includes/head.pug
-  body
-    include ./includes/header-nav.pug
-    block content
-    include ./includes/footer.pug
+	include ./includes/head.pug
+	body
+		include ./includes/header-nav.pug
+		<div id="wrapper">
+			block content
+		</div>
+		include ./includes/footer.pug
 
