--- a/src/views/includes/header-nav.pug
+++ b/src/views/includes/header-nav.pug
@@ -1,4 +1,5 @@
 <nav role="navigation" class="navbar navbar-default">
+    <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
@@ -7,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#" class="navbar-brand">Brand</a>
+            <a href="#" class="navbar-brand">My Fitness Plan</a>
         </div>
         <!-- Collection of nav links and other content for toggling -->
         <div id="navbarCollapse" class="collapse navbar-collapse">
@@ -20,4 +21,5 @@
                 <li><a href="#">Login</a></li>
             </ul>
         </div>
+    </div>
 </nav>
